[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3", features = ["console", "Window"]}
serde-wasm-bindgen = "0.6.5"
serde = "1.0.219"
log = "0.4.27"
console_error_panic_hook = "0.1"
console_log = "0.2"
serde_json = "1.0.140"
